kubernetes/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: game-of-life-deployment

  labels:

    app: game-of-life

spec:
  replicas: 3

  selector:

    matchLabels:

      app: game-of-life

  template:

    metadata:

      labels:

        app: game-of-life

    spec:
      containers:

        - name: game-of-life

          image: ghcr.io/arielpro2/game-of-life-multiplayer:latest

          ports:

            - containerPort: 5000

      imagePullSecrets:

        - name: github-container-registry
