kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-of-life-service

spec:
    selector:
        name: game-of-life
    ports:
        - name: "5000"
          port: 5000
          targetPort: 5000
