kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-of-life-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /test
          pathType: Prefix
          backend:
            service:
              name: "game-of-life-ingress"
              port:
                number: 5000
